# fward

./: README.md
src/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile
src/cmake/: Documenting.cmake  Format.cmake  GitVendor.cmake  Linker.cmake  System.cmake  Tooling.cmake  VCPkg.cmake
src/include/: system.h  version.template
src/include/utils/: gettimeofday.h  stl_case_insensitive.h  temporary.h
src/src/: main.cpp  system.cpp
src/src/utils/: gettimeofday.cpp
src/test/: CMakeLists.txt  main-test.cpp  test.h
